@@ -15,6 +15,7 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.util.Date;
 import java.util.Properties;
@@ -42,7 +43,7 @@ public class SigmaCheck {
     private static boolean containsSUMO(String targetURL) {
 
         try {
-            URL target = new URL(targetURL);
+            URL target = URI.create(targetURL).toURL();
             BufferedReader in = new BufferedReader(new InputStreamReader(target.openStream()));
 
             StringBuilder HTMLbuffer = new StringBuilder();
